--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ nav:
   - Home: index.md
   - Guidelines: guidelines.md
   - Download: download.md
-  - What's next: next.md
+  - Our next steps: next.md
   - Working group: workinggroup.md
   - Contact: contact.md
 theme:
