--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
   - Our next steps: next.md
   - Working group: workinggroup.md
   - Download: download.md
+  - How to cite: citation.md
   - Contact: contact.md
 theme:
   name: material
