--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,8 +4,9 @@ nav:
   - Home: index.md
   - Guidelines: guidelines.md
   - Our next steps: next.md
-  - Working group: workinggroup.md
   - Download: download.md
+  - News & Updates: update.md
+  - Working group: workinggroup.md
   - How to contribute: contact.md  
   - How to cite: citation.md
 
