add override to add schema.org metadata and improve findability of page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ nav:
 
 theme:
   name: material
+  custom_dir: overrides
   logo: assets/images/ednafair_icon.svg
   favicon: assets/images/ednafair_icon.svg
   palette:
